--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -22,6 +22,7 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults: "false"
 # none : 아무것도 실행하지 않음.
 spring.jpa.hibernate.ddl-auto: "create-drop"
 
-redis.server: "redis"
+# redis.server: "redis"
+redis.server: "localhost"
 redis.port: "6379"
 signing.key: "345345fsdfsf5345"
